--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Felipe Alvarado
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: QA Automation Engineer and Master in Data Science student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://i.pinimg.com/736x/61/c8/a8/61c8a810027030dc3d88b49720d71bc9--bleach-anime-bleach-manga-cover.jpg
 
 #
 # Flags below are optional
